Opened 16 years ago
Closed 16 years ago
#3712 closed bug (fixed)
dhcp failure
Reported by: | rossi | Owned by: | zooey |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet/Stack | Version: | R1/pre-alpha1 |
Keywords: | Cc: | grzegorz.dabrowski@…, lurohh@…, brecht@…, umccullough@…, pieter@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
One of the recent changes to the networking stack, prevent DHCP from functioning properly. No IP address is assigned, the system defaults to a 169... address. Static settings of course still work.
However other networking apps also experience issues, e.g. NetworkTime:
rossi@wayreth home> /boot/apps/NetworkTime/NetworkTime -g
0% Contacting server "pool.ntp.org"...
25% Sending request... 50% Waiting for answer...
Waiting for answer failed: General system error
0% Contacting server "de.pool.ntp.org"...
25% Sending request... 50% Waiting for answer...
Waiting for answer failed: General system error
0% Contacting server "time.nist.gov"...
25% Sending request... 50% Waiting for answer...
Waiting for answer failed: General system error
Syslog attached.
This happens on hrev30001.
Attachments (5)
Change History (26)
by , 16 years ago
by , 16 years ago
Attachment: | tcpdump-log added |
---|
comment:2 by , 16 years ago
Cc: | added |
---|
comment:3 by , 16 years ago
Cc: | added |
---|
comment:4 by , 16 years ago
The revision that causes this is hrev30000.
I'm seeing it in VMware Player 2.5.0 & 2.5.2 (ipro1000), currently running revision 30111.
comment:6 by , 16 years ago
Cc: | added |
---|
comment:7 by , 16 years ago
You can add me to the list as well. Cannot get DHCP with broadcom 570x (bsd compat). In addition, I've had issues with bezilla downloads as well. The result of multiple tries to get Paladin from bebits.
-rw------- 1 baron root 1679945 Apr 13 10:24 Paladin1.0rc5.pkg(2).zip -rw------- 1 baron root 1679945 Apr 13 10:25 Paladin1.0rc5.pkg(3).zip -rw------- 1 baron root 1679945 Apr 13 10:25 Paladin1.0rc5.pkg(4).zip -rw------- 1 baron root 0 Apr 13 10:25 Paladin1.0rc5.pkg(5).zip -rw------- 1 baron root 0 Apr 13 10:23 Paladin1.0rc5.pkg.zip -rw-r--r-- 1 baron root 1679945 Apr 13 10:24 Paladin1.0rc5.pkg1.zip
wget seems to get it consistently right, though... I also had a kdl while changing the IP address, will attach here as it might be related.
comment:8 by , 16 years ago
Cc: | added |
---|
comment:9 by , 16 years ago
Same here for DHCP not working and BeZilla downloads being broken (could even reproduce it with wget, actually). Other than that, BeZilla sometimes only partially download images which is probably related to the download problem.
comment:10 by , 16 years ago
Can we revert the buggy commit temporary? This is very annoying regression.
follow-up: 16 comment:11 by , 16 years ago
You can use an older revision if you want to. Unfortunately, I cannot reproduce this problem here. I will try to fix the other bugs that this change revealed, and maybe the problem disappears then.
In any case, more debug output would be helpful, like a tcpdump of a DHCP negotiation, etc.
follow-up: 13 comment:12 by , 16 years ago
At least for me, the DHCP problem predates BeGeistert so it is not related to the latest changes made.
comment:13 by , 16 years ago
Replying to bga:
At least for me, the DHCP problem predates BeGeistert so it is not related to the latest changes made.
That's likely a separate issue, this ticket specifically tracks those of us who used to have working DHCP and had it break with the BG changes.
comment:14 by , 16 years ago
Also busted for me on an rtl8168..
Let me know if I can assist with debugging, I can probably set up wireshark or something and capture some traffic if required.
comment:15 by , 16 years ago
Well, I used to hyave it working and it broke. I am just saying this happened pre-BG for me. Maybe it just got more broken after BG.
comment:16 by , 16 years ago
Replying to axeld:
Unfortunately, I cannot reproduce this problem here. I will try to fix the other bugs that this change revealed, and maybe the problem disappears then.
It also occurs in VMWare for me, with the default haiku.vmx. Maybe it will do the same for you in VMware?
comment:17 by , 16 years ago
@axeld: please also take a look into NetworkTime ;-) which had been broken by the same time.
comment:18 by , 16 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
The same issue here, too, in VMware-Player-2.5 with emulated ipro1000 NIC configured for NAT. I have attached two wireshark traces, which show that haiku has ceased to send DHCP-requests after having received an offer. I will try to sort this one out tomorrow.
comment:19 by , 16 years ago
I've done a binary search of the vmware images. DHCP worked in hrev29984, but not anymore in hrev30012. So somewhere in this range it stopped working: This shows those revisions (and a few more): http://dev.haiku-os.org/timeline?from=04%2F07%2F2009&daysback=1&changeset=on&update=Update
Log of tcpdump while trying to get IP with DHCP