fixing #3712: * Since r30000, a net_socket is not zeroed anymore, which in turn   leaves its two addresses (local and peer) in an uninitialized,   but correct state - marking their state with ss_len == 0.   However, this state was not properly detected in some ipv4-address   functions, especially not the one that creates a hash value from   those two addresses.   This basically caused UDP to stop working, as here the peer address   (as opposed to TCP) is usually not explicitly initialized.   Adjusting the ipv4-address functions accordingly fixes the problem,   such that DHCP (and the rest of UDP) should now work again.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30175 a95241bf-73f2-0310-859d-f6bbb57e9c96